--- a/DopodCinema/Module/Movie/Cell/TopHorizontalCell.xib
+++ b/DopodCinema/Module/Movie/Cell/TopHorizontalCell.xib
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -30,27 +31,29 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                     </collectionView>
-                    <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="5" currentPage="2" translatesAutoresizingMaskIntoConstraints="NO" id="Ma3-p0-a1Q" customClass="CustomPageControl" customModule="DopodCinema" customModuleProvider="target">
-                        <rect key="frame" x="84.333333333333329" y="290" width="151.66666666666669" height="8"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uIB-V0-OlE">
+                        <rect key="frame" x="156" y="290" width="8" height="10"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q6j-gs-zik">
+                                <rect key="frame" x="0.0" y="0.0" width="8" height="8"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="8" id="AQj-za-aq0"/>
+                                    <constraint firstAttribute="height" constant="8" id="rpi-u5-4qq"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <constraints>
-                            <constraint firstAttribute="height" constant="8" id="VYw-Sg-O18"/>
+                            <constraint firstAttribute="height" constant="10" id="zSf-2U-auf"/>
                         </constraints>
-                        <color key="pageIndicatorTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="currentPageIndicatorTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="image" keyPath="activeDot" value="ic_active_dot"/>
-                            <userDefinedRuntimeAttribute type="image" keyPath="inactiveDot" value="ic_dot_nav"/>
-                            <userDefinedRuntimeAttribute type="image" keyPath="currentPageImage" value="ic_active_dot"/>
-                            <userDefinedRuntimeAttribute type="image" keyPath="otherPagesImage" value="ic_dot_nav"/>
-                        </userDefinedRuntimeAttributes>
-                    </pageControl>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Ma3-p0-a1Q" firstAttribute="top" secondItem="ES6-nG-Squ" secondAttribute="bottom" constant="10" id="5zn-5C-6oz"/>
-                    <constraint firstItem="Ma3-p0-a1Q" firstAttribute="centerX" secondItem="ES6-nG-Squ" secondAttribute="centerX" id="9fH-rV-Xez"/>
+                    <constraint firstAttribute="bottom" secondItem="uIB-V0-OlE" secondAttribute="bottom" constant="18" id="21a-w0-oaw"/>
+                    <constraint firstItem="uIB-V0-OlE" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="A34-VS-sDD"/>
                     <constraint firstAttribute="trailing" secondItem="ES6-nG-Squ" secondAttribute="trailing" id="HcW-jq-vt5"/>
                     <constraint firstItem="ES6-nG-Squ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="fzd-oB-nKQ"/>
-                    <constraint firstAttribute="bottom" secondItem="ES6-nG-Squ" secondAttribute="bottom" constant="10" id="m6J-lc-qtG"/>
+                    <constraint firstItem="uIB-V0-OlE" firstAttribute="top" secondItem="ES6-nG-Squ" secondAttribute="bottom" constant="10" id="y9P-os-DNy"/>
                     <constraint firstItem="ES6-nG-Squ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="ydF-np-M5w"/>
                 </constraints>
             </tableViewCellContentView>
@@ -58,13 +61,14 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="collectionView" destination="ES6-nG-Squ" id="swQ-zm-LyG"/>
-                <outlet property="pageControl" destination="Ma3-p0-a1Q" id="TM2-r4-8Be"/>
+                <outlet property="pageControl" destination="uIB-V0-OlE" id="gOx-Ve-AaU"/>
             </connections>
             <point key="canvasLocation" x="106.87022900763358" y="118.66197183098592"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="ic_active_dot" width="24" height="8"/>
-        <image name="ic_dot_nav" width="5" height="5"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
